# swagger.json
@@ -16,7 +16,7 @@
         "responses": {}
       }
     },
-    "/contact": {
+    "/contacts": {
       "post": {
         "description": "",
         "parameters": [
@@ -53,9 +53,7 @@
             "description": "Internal Server Error"
           }
         }
-      }
-    },
-    "/contacts": {
+      },
       "get": {
         "description": "",
         "parameters": [],
@@ -69,7 +67,7 @@
         }
       }
     },
-    "/contact/{id}": {
+    "/contacts/{id}": {
       "get": {
         "description": "",
         "produces": ["application/json"],
